crates/apollo-compiler/test_data/diagnostics/0089_fragment_type_condition_on_non_existent_types.txt
Error: fragments must be specified on types that exist in the schema
   ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:5:5]
   │
 5 │     ... on MissingSecondType {
   │            ────────┬────────  
   │                    ╰────────── `MissingSecondType` is defined here but not declared in the schema
   │ 
   │ Help: consider defining `MissingSecondType` in the schema
───╯
Error: fragments must be specified on types that exist in the schema
    ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:23:3]
    │
 23 │   ... on MissingType {
    │          ─────┬─────  
    │               ╰─────── `MissingType` is defined here but not declared in the schema
    │ 
    │ Help: consider defining `MissingType` in the schema
────╯
Error: fragments must be specified on types that exist in the schema
    ╭─[0089_fragment_type_condition_on_non_existent_types.graphql:28:1]
    │
 28 │ fragment invalidFragmentCondition on Interface2 {
    │                                      ─────┬────  
    │                                           ╰────── `Interface2` is defined here but not declared in the schema
    │ 
    │ Help: consider defining `Interface2` in the schema
────╯

